# big-mood-detector

./: .coverage  .cursorrules  .dmypy.json  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF_DETAILED_REPORT.md  ARCHITECTURE.md  BIPOLAR_LITERATURE.md  BRANCH_SYNC_PLAN.md  BULLETPROOF_PIPELINE_SUMMARY.md  CDS_DRAFT.md  CDS_ROUGH_DRAFT.md  CHANGELOG.md  CHECKPOINT.md  CHECKPOINT_20250724_0100.md  CHECKPOINT_2025_01_20.md  CHECKPOINT_2025_01_21_FINAL.md  CHECKPOINT_2025_01_26.md  CHECKPOINT_2025_07_21.md  CHECKPOINT_2025_07_22.md  CHECKPOINT_2025_07_23.md  CHECKPOINT_2025_07_26.md  CLAUDE.md  CLEANUP_PLAN.md  COMPREHENSIVE_FINDINGS_SUMMARY.md  CONTRIBUTING.md  DATA.md  DATA_DOSSIER.md  DATA_PROCESSING.md  DATA_REQUIREMENTS_ANALYSIS.md  DATA_SELECTION_AND_VALIDATION_ANALYSIS.md  DEEP_AUDIT_FINDINGS.md  DEPLOYMENT_READINESS.md  DIRECTORY_FIX_SUMMARY.md  DOCKER_SETUP_GUIDE.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_UPDATE_PLAN.md  (+63 more)
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: pat-finetuning.md  performance_optimization.md  v030-epic.md
.github/issues/: audit-backend-state.md  complete-api-testing.md  fix-api-response-codes.md  implement-features-extract-endpoint.md  remove-hardcoded-paths.md  setup-github-actions-ci.md  test-label-cli-e2e.md
.github/scripts/: check-clean.sh
.github/workflows/: README.md  check-clean-repo.yml  ci.yml  claude-code.yml  claude.yml  docker-tests.yml  essential.yml  merge-flow.yml  nightly-tests.yml  nightly.yml  pat-training-smoke-test.yml  production.yml  staging.yml  unified-ci.yml
.hypothesis/constants/: 10c95d5eaf544b5b  1240513f7040ed52  13ad9c06d96b162e  1ad97a89ab835f98  1bd864bee8b39ccc  1de0b40e95e620b0  1e5eb26afd11c95d  2ac1042e145c7487  2d151247d2ea61be  30db143369225f62  3687bb186befe1a1  3ba4b9073589a553  3f00564c06fe01dd  53678ec0789ac3d2  577ea4be564a4a8a  59634951a765508c  5b0597917637a9e3  5c7ea86b3c5cf180  5dc12a5c7879c9cc  661bc7486c528930  67c08962f70b6ed4  72631b28969963a1  7c4994ff9ff9ca15  7d0e0e027e78eae5  8e949eb08fc3f8a8  94da2fc571298601  9eb3b3914611582c  a9ad2e5023db6f58  abe3aeacdfded48d  b1a16d5432d6602f  b3dd5539146ead07  c51894703e3ea3f4  c54b0cde334a29a2  ccd0e19fee8ef6bf  cff2839fda1cd843  da39a3ee5e6b4b0d  dc3de07bf8506bd9  e088b8828c2b79ec  e441dea11c4673c4  ed26f9068b14af53  (+2 more)
.venv_new/: pyvenv.cfg
LICENSES/: README.md
alembic/: env.py
alembic/versions/: 84347d3b14a1_add_heart_rate_and_hrv_columns_to_.py
analysis/pat_training/: training_recipe.json
config/: clinical_thresholds.yaml  seoul_feature_schema.yml
converted_markdown/bipolar-digital-biomarkers/: bipolar-digital-biomarkers.md  bipolar-digital-biomarkers_meta.json
converted_markdown/xgboost-mood/: xgboost-mood_meta.json
data/: README.md
data/nhanes/: README.md  move_files_here.sh
docker/: entrypoint.sh  healthcheck.py
docker/ci/: alpine.Dockerfile
docs/: BIPOLAR_SHORT_DOSSIER.md  CLAUDE_BRANCHES_ANALYSIS.md  CLINICAL_DOSSIER.md  COMPLETE_VALIDATION_SUMMARY.md  CRITICAL_DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_STATUS_v0.4.0.md  DOCUMENTATION_STRUCTURE.md  DOMAIN_TEST_REORG_PLAN.md  DUAL_PIPELINE_ARCHITECTURE.md  GIT_WORKFLOW.md  IMPORTANT_PLEASE_READ.md  INTEGRATION_TEST_REORG.md  ISSUE_STATUS_REPORT.md  LABELING_CLI_DESIGN.md  LABELING_CLI_IMPLEMENTATION_PLAN.md  MODEL_LABELING_REQUIREMENTS.md  MODEL_WEIGHT_ARCHITECTURE.md  OPERATIONALIZATION_AGENT_PLAN.md  OPERATIONALIZATION_PLAN.md  OPERATIONALIZATION_TAILORED_PLAN.md  OWNERS.md  PAT_FINE_TUNING_ROADMAP.md  PAT_INTEGRATION_COMPLETE.md  PAT_L_PAPER_REPLICATION.md  PAT_MODEL_SSOT.md  PAT_TRAINING_SUMMARY.md  PERFORMANCE_FIX_ISSUE_29.md  PERFORMANCE_INVESTIGATION.md  README.md  REFACTORING_ROADMAP.md  SECURITY.md  STRUCTURE.md  TRIAGE_PLAN.md  V0.3.0_SAFE_MIGRATION_PLAN.md  baseline_persistence_plan.md  license.md  model_integration_guide.md  pat_l_training_findings.md  sparse_temporal_data_research_2025.md  work_summary_july_24_2025.md
docs/api/: clinical.md  features.md  health.md  labels.md  predictions.md
docs/architecture/: domain_services_audit.md  xml_optimization_solution.md
docs/archive/: CHECKPOINT_2025_07_25.md  CLAUDE_CODE_SETUP.md  CLEANUP_AND_WORKFLOW.md  CLEANUP_SUMMARY.md  COMPLETE_TEST_REORG_SUMMARY.md  FINAL_TEST_REORG_SUMMARY.md  GITHUB_ACTIONS_CLAUDE_CODE.md  INFRASTRUCTURE_TEST_REORG.md  PAT_MODEL_SSOT.md  README.md  ROADMAP.md  ROADMAP_V0.3.0.md  TEST_REORGANIZATION_SUMMARY.md  TEST_SUITE_ANALYSIS.md  XML_PIPELINE_ANALYSIS.md  old_index_v2.md
health_auto_export/: Active Energy.json  Apple Sleeping Wrist Temperature.json  Heart Rate Variability.json  Heart Rate.json  README.md  Respiratory Rate.json  Resting Energy.json  Resting Heart Rate.json  Sleep Analysis.json  Step Count.json  VO2 Max.json  Walking + Running Distance.json
issues/: README.md  baseline-persistence-legacy-api.md  streaming-parser-date-bug.md  xgboost-booster-predict-proba.md
literature/: clinical_references_to_read.md
model_weights/: README.md
nhanes/: NHANES.md  README.md
reference_repos/: README.md
scripts/: ACTIVE_SCRIPTS.md  README.md  README_OLD.md  README_OLD_BACKUP.md  analyze_data_coverage.py  analyze_pat_training.py  analyze_xml_record_types.py  assert_feature_schema.py  benchmark_ensemble.py  benchmark_xml_parser.py  check_no_sleep_percentage.sh  check_todo_format.py  compare_xml_json_pipelines.py  convert_pat_weights.py  convert_xgboost_models.py  create_github_issues_for_todos.sh  create_nhanes_scaler_stats.py  debug_data_sources.py  debug_nhanes_columns.py  debug_pat_architecture.py  debug_pat_training.py  debug_xml_parser.py  demo_model_integration.py  download_model_weights.py  extract_clean_test_data.py  extract_test_data.py  extract_todos_for_github.py  find_positional_embeddings.py  fix_all_early_imports.py  fix_early_imports.py  fix_final_imports.py  fix_import_errors.py  fix_imports_properly.py  fix_nhanes_cache_fast.py  fix_pat_models.py  fix_test_imports.py  fix_test_imports_simple.py  fix_type_errors.py  generate_licenses.py  generate_requirements.py  (+54 more)
tests/: README.md  conftest.py
(+1422 files in other folders)
